[package]
name    = "hidapi-sys"
version = "0.1.0"
build   = "build.rs"
links   = "hidapi"

authors = ["meh. <meh@schizofreni.co>"]
license = "WTFPL"

description = "FFI bindings to hidapi"
repository  = "https://github.com/meh/rust-hidapi-sys"
keywords    = ["hid"]

[features]
raw = []
usb = []

static = []
build  = ["static"]

[dependencies]
libc = "0.2"

[build-dependencies]
gcc        = "0.3"
pkg-config = "0.3.5"
